# stream-ripper

./: README.md  install.ps1  install.sh  pyproject.toml  streamer.py  uninstall.ps1  uninstall.sh
_streamer/: cli.py  models.py  net.py  player.py  probe.py  proxy.py  resolve.py  settings.py  tui.py
_streamer/sources/: __init__.py  football.py
