[project]
name = "our-streamer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "m3u8>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "yt-dlp>=2024.1.0",
    "playwright>=1.40.0",
    "curl-cffi>=0.7.0",
    "textual>=8.1.1",
    "rich>=14.3.3",
]
